# when-turbines-look-away-detecting-yaw-misalignment

./: .env  .env.example  .gitignore  38_create_animation.py  38_yaw_misalignment_mapper_blog.md  README.md  article.md  benchmark_rust.py  config.yaml  nrel_wtk.py  pyproject.toml  turbine_icing_detection.py  turbine_yaw_detection.py  turbine_yaw_detection_archive.py  yaw_mapper.py
_drafts/: turbine_yaw_detection_archive.py
rust/: Cargo.toml
rust/bench/: Cargo.toml
rust/bench/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/py/: Cargo.toml
rust/py/src/: lib.rs
src/: compute_kernel.py
