[project]
name = "when-turbines-look-away-detecting-yaw-misalignment"
version = "0.1.0"
description = "Companion code for Medium article: when turbines look away detecting yaw misalignment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pytest>=8.0",
    "gudhi>=3.10.0",
    "matplotlib>=3.10.9",
    "networkx>=3.4.0",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
