[project]
name = "when-turbines-look-away-detecting-yaw-misalignment"
version = "0.1.0"
description = "Companion code for Medium article: when turbines look away detecting yaw misalignment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pytest>=8.0",
    "gudhi>=3.10.0",
    "matplotlib>=3.10.9",
    "networkx>=3.4.0",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

# Optional Rust extension — build with:
#   pip install maturin && maturin develop --release -m rust/py/Cargo.toml
[tool.maturin]
manifest-path = "rust/py/Cargo.toml"
module-name = "when_turbines_look_away_detecting_yaw_misalignment_rs"

